# partystation

./: .gitignore  Cargo.toml  Cross.toml  GEMINI.md  README.md  index.html  partystation.service  setup_hotspot.sh
cross/: armv7-unknown-linux-gnueabihf.Dockerfile
public/: index.html  script.js  style.css  tv.html  tv.js
src/: main.rs
zig/: aarch64-unknown-linux-gnu.Dockerfile  armv7-unknown-linux-gnueabihf.Dockerfile
