[package]
name = "partystation"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
rand = "0.8.5"
futures-util = "0.3.30"
mdns-sd = "0.10.0"
slint = { version = "1.5.1", features = ["compat-1-2", "renderer-software", "backend-winit"] }
if-addrs = "0.10.0"
