[package]
name = "partystation"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
rand = "0.8.5"
futures-util = "0.3.30"
mdns-sd = "0.10.0"
slint = { version = "1", default-features = false, features = [
    "std",
    "renderer-software",
    "backend-linuxkms-noseat",
    "backend-winit",
    "compat-1-2"
] }

fontique = { version = "0.7", features = ["fontconfig-dlopen"] }


if-addrs = "0.10.0"
